# S9Slicer-new

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  ROADMAP.md  main.cpp  s9slicer_push_key  version.h
docs/: HOWTO.md  INSTALL.md  ROADMAP.md
gui/: CMakeLists.txt  GLViewport.cpp  GLViewport.h  MainWindow.cpp  MainWindow.h
include/: clipper.h  clipper_utils.h  contour.h  extruder_planner.h  fan_control.h  gcode_generator.h  infill.h  model_loader.h  perimeter_clipper.h  planner.h  skin.h  slicer.h  stl_parser.h
src/: main.cpp
src/engine/: arc_fitter.cpp  arc_fitter.h  arcwelder_post.cpp  arcwelder_post.h  bridge_extrusion.cpp  bridge_extrusion.h  clipper.cpp  clipper_utils.h  contour.cpp  contour.h  extruder_planner.cpp  extrusion_calculator.cpp  extrusion_calculator.h  fan_control.cpp  gcode_generator.cpp  gcode_generator.h  infill.cpp  infill.h  infill_clipper.cpp  infill_clipper.h  infill_preview.cpp  infill_preview.h  layerplan.cpp  layerplan.h  model_loader.cpp  model_loader.h  path_smoothing.cpp  path_smoothing.h  perimeter_clipper.cpp  perimeter_clipper.h  planner.cpp  skin.cpp  skin.h  slicer.cpp  smartfan.cpp  smartfan.h  stl_parser.cpp  stl_parser.h  support_gcode.cpp  support_gcode.h  (+4 more)
