cmake_minimum_required(VERSION 3.15)
project(S9Slicer)
set(CMAKE_CXX_STANDARD 17)
option(BUILD_GUI "Build the Qt GUI frontend" ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 REQUIRED COMPONENTS Widgets OpenGLWidgets)
add_library(s9slicer_core)
add_executable(s9slicer)
if(BUILD_GUI)
    add_subdirectory(gui)
endif()
